--- a/api消耗分析/智投消耗分析.Rmd
+++ b/api消耗分析/智投消耗分析.Rmd
@@ -1,7 +1,7 @@
 ---
 title: '智投消耗分析'
 author:  ''
-date: "`r Sys.Date()`"
+date: '`r Sys.Date()`'
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Vignette Title}
@@ -260,3 +260,74 @@ where budget_type =2
     ) b group by 1, 2,3
 order by 2,3,1 desc
 ```
+
+# 个别案例分析
+
+## api 创建创意占比高，消耗低
+
+大中型
+
+51多盟：  绑定账户数203  
+大客户。通过api创建创意占比极高，占90%左右，但是通过api消耗不够高，仅占60%左右。  
+总消耗在200w左右  api消耗在80w左右
+
+ 
+26执象广告   绑定账户数121  
+通过api创建创意比波动下降，api消耗占比一直非常低，在10%以下。 
+但是消耗数量级很高，总消耗在70w左右，api消耗在10w以下
+
+25东莞快牛   绑定账户数320 总消耗在10w左右，api日消耗在10w
+
+31杭州澳比  绑定账户数152 日总消耗在1w左右，api在5k左右
+
+### 新用户
+
+
+57芜湖 总消耗2k左右  绑定帐户数39  
+
+api消耗为0：新创建的账户   
+88广州佳创  绑定账户数5  
+82上海效易  绑定账户数0  
+
+## api 创建创意占比高，消耗高
+
+中型用户
+
+创建创意占比高，并且消耗也高的案例(占比80%以上)，比较优质的客户。此类用户注册时间早，总量高，趋势较稳定。  
+
+58 广州易双   绑定账户数233  总消耗在20w左右，api在13w左右
+38 河南申鼠   绑定账户数69   总消耗在1w左右
+34 宁波麦粒   绑定账户数366   总消耗在30w左右
+33 杭州幻鸟   绑定账户数480  总消耗在9w左右
+32 深圳天游   绑定账户数69   总消耗8w左右
+28 上海德绚   绑定账户数143  总消耗24w左右
+23 广州天拓   绑定账户数69   总消耗22w左右 10月1日消耗大幅度突起
+5 晋拓        绑定账户数367  总消耗142w左右
+
+## api 创建创意占比低，消耗低
+
+api消耗之前不是0逐渐变为0的情况，客户可能会流失。
+获取电商下单过审率整体较差。
+
+59宜都    绑定账户数15   消耗在2w左右
+39新效    绑定账户数10   总消耗2w左右，api消耗5k以下
+
+## api创建创意占比低，消耗高
+
+无
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
